# OpenSketch

./: Application.cpp  Application.h  CMakeLists.txt  Ellipse.cpp  Ellipse.h  README.md  Rectangle.cpp  Rectangle.h  SupportClasses.h  functions.cpp  functions.h  includeLibs.h  main.cpp
Commands/: AddDecoratorCommand.cpp  AddDecoratorCommand.h  AddEllipseCommand.cpp  AddEllipseCommand.h  AddRectangleCommand.cpp  AddRectangleCommand.h  AddShapeCommand.cpp  AddShapeCommand.h  ChangeEllipseCommand.cpp  ChangeEllipseCommand.h  ChangeRectangleCommand.cpp  ChangeRectangleCommand.h  ChangeShapeCommand.cpp  ChangeShapeCommand.h  Command.cpp  Command.h  CommandContext.cpp  CommandContext.h  FormGroupCommand.cpp  FormGroupCommand.h  RemoveEllipseCommand.cpp  RemoveEllipseCommand.h  RemoveRectangleCommand.cpp  RemoveRectangleCommand.h  RemoveShapeCommand.cpp  RemoveShapeCommand.h  UnFormGroupCommand.cpp  UnFormGroupCommand.h
Data/: datafile.txt
Decorators/: OrnamentBottomDecorator.cpp  OrnamentBottomDecorator.h  OrnamentLeftDecorator.cpp  OrnamentLeftDecorator.h  OrnamentRightDecorator.cpp  OrnamentRightDecorator.h  OrnamentTopDecorator.cpp  OrnamentTopDecorator.h  ShapeDecorator.cpp  ShapeDecorator.h  ShapeTestDecorator.cpp  ShapeTestDecorator.h  TextDecorator.cpp  TextDecorator.h
GLFW/: GLFWfunctions.cpp  GLFWfunctions.h
GLM/: CMakeCache.txt  Makefile  cmake_install.cmake
GTK/: GTKManager.cpp  GTKManager.h  GTKWindow.cpp  GTKWindow.h  gtkCallbacks.cpp  gtkCallbacks.h
GTKStuff/: GTKManager.cpp  GTKManager.h  GTKWindow.cpp  GTKWindow.h
OpenGL/: DrawableObject.cpp  DrawableObject.h  Drawer.cpp  Drawer.h  EllipseDrawer.cpp  EllipseDrawer.h  OpenGLRenderManager.cpp  OpenGLRenderManager.h  RectangleDrawer.cpp  RectangleDrawer.h  ShapeRenderManager.cpp  ShapeRenderManager.h
Shaders/: fragment.glsl  fragment_ellipse.glsl  fragment_rectangle.glsl  fragment_text.glsl  vertex.glsl  vertex_text.glsl
Shapes/: Ellipse.cpp  Ellipse.h  Group.cpp  Group.h  IShape.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Visitable.h  Visitor.cpp  Visitor.h
States/: EditShapeState.cpp  EditShapeState.h  GroupShapesState.cpp  GroupShapesState.h  MoveShapeState.cpp  MoveShapeState.h  NullState.cpp  NullState.h  State.h
Visitors/: DrawVisitor.cpp  DrawVisitor.h  MoveShapeVisitor.cpp  MoveShapeVisitor.h  ResizeShapeVisitor.cpp  ResizeShapeVisitor.h  SetSelectedVisitor.cpp  SetSelectedVisitor.h  Visitable.h  Visitor.cpp  Visitor.h  WriteToFileVisitor.cpp  WriteToFileVisitor.h
